// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List renders correctly 1`] = `
.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  list-style-type: none;
  padding: 4px;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  overflow-y: scroll;
  padding-right: 4px;
  overflow: auto;
  -webkit-scroll-behavior: smooth;
  -moz-scroll-behavior: smooth;
  -ms-scroll-behavior: smooth;
  scroll-behavior: smooth;
}

.c2::-webkit-scrollbar {
  width: 4px;
}

.c2::-webkit-scrollbar-track {
  -webkit-border-radius: 4px;
  background: #E4E8EA;
}

.c2::-webkit-scrollbar-thumb {
  -webkit-border-radius: 4px;
  background: #6F838D;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px 6px 12px;
  gap: 8px;
}

.c5 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
}

.c6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 6px;
  color: #6F838D;
  font-family: Nunito Sans;
  font-weight: 400;
}

.c6 > *:first-child {
  position: absolute;
  left: 12px;
  height: 14px;
  font-size: 14px;
}

.c7 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  font-weight: 400;
  border: none;
  box-shadow: none;
  font-family: primary;
  display: block;
  padding-left: 30px;
  padding-right: 12px;
  outline: none;
  width: 100%;
}

.c8 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding-top: 10px;
  padding-bottom: 10px;
  padding-left: 16px;
  padding-right: 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: primary;
  width: 100%;
}

.c9 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  width: 18px;
  height: 18px;
}

.c10 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: absolute;
  opacity: 0;
  overflow: hidden;
  width: 100%;
  height: 100%;
}

.c14 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 8px;
  border-radius: 2px;
  color: gray;
}

input:checked ~ .c0 {
  color: primary;
}

input:focus ~ .c0 {
  box-shadow: active;
}

.c11 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 8px;
  border-radius: 2px;
  color: gray;
  width: 16px;
  height: 16px;
}

input:checked ~ .c0 {
  color: primary;
}

input:focus ~ .c0 {
  box-shadow: active;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c13 {
  display: none;
}

input:checked:not(:disabled) ~ .c12 {
  display: block;
}

.c16 {
  display: none;
}

input:not(:checked):not(:disabled) ~ .c15 {
  display: block;
}

.c20 {
  display: none;
}

input:checked:disabled ~ .c19 {
  display: block;
}

.c18 {
  display: none;
}

input:disabled:not(:checked) ~ .c17 {
  display: block;
}

@media screen and (min-width:40em) {

}

<ul
  className="c0 c1"
>
  <div
    className="c0 c2"
  >
    <span
      className="c0 c3 c4"
    >
      <div
        className="c0 c5"
        width="100%"
      >
        <div
          className="c0 c6"
        >
          <span
            className="icon-buscar"
          />
          <input
            className="c0 c7"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            placeholder="Search"
            type="text"
            width="100%"
          />
        </div>
      </div>
    </span>
    <li
      className="c0 c8"
      width={1}
    >
      <div
        className="c0 c9"
      >
        <input
          className="c0 c10"
          type="checkbox"
        />
        <svg
          aria-hidden="true"
          className="c0 c11 c12 c13 c0 c14"
          fill="none"
          height={16}
          viewBox="0 0 16 16"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            fill="#6A88F2"
            height="15"
            rx="4"
            ry="4"
            stroke="#6A88F2"
            width="15"
            x="0.5"
            y="0.5"
          />
          <path
            d="M 5,8 L 7,10 L 12,5"
            stroke="white"
            strokeLinecap="round"
            strokeWidth="1.5"
          />
        </svg>
        <svg
          aria-hidden="true"
          className="c0 c11 c15 c16 c0 c14"
          fill="none"
          height={16}
          viewBox="0 0 16 16"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            fill="white"
            height="15"
            rx="4"
            ry="4"
            stroke="#C1CCD0"
            width="15"
            x="0.5"
            y="0.5"
          />
        </svg>
        <svg
          aria-hidden="true"
          className="c0 c11 c17 c18 c0 c14"
          fill="none"
          height={16}
          viewBox="0 0 16 16"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            fill="#EFF2F3"
            height="15"
            rx="4"
            ry="4"
            stroke="#EFF2F3"
            width="15"
            x="0.5"
            y="0.5"
          />
        </svg>
        <svg
          aria-hidden="true"
          className="c0 c11 c19 c20 c0 c14"
          fill="none"
          height={16}
          viewBox="0 0 16 16"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            fill="#EFF2F3"
            height="15"
            rx="4"
            ry="4"
            stroke="#EFF2F3"
            width="15"
            x="0.5"
            y="0.5"
          />
          <path
            d="M 5,8 L 7,10 L 12,5"
            stroke="#C1CCD0"
            strokeLinecap="round"
            strokeWidth="1.5"
          />
        </svg>
      </div>
      One
    </li>
    <li
      className="c0 c8"
      width={1}
    >
      <div
        className="c0 c9"
      >
        <input
          className="c0 c10"
          type="checkbox"
        />
        <svg
          aria-hidden="true"
          className="c0 c11 c12 c13 c0 c14"
          fill="none"
          height={16}
          viewBox="0 0 16 16"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            fill="#6A88F2"
            height="15"
            rx="4"
            ry="4"
            stroke="#6A88F2"
            width="15"
            x="0.5"
            y="0.5"
          />
          <path
            d="M 5,8 L 7,10 L 12,5"
            stroke="white"
            strokeLinecap="round"
            strokeWidth="1.5"
          />
        </svg>
        <svg
          aria-hidden="true"
          className="c0 c11 c15 c16 c0 c14"
          fill="none"
          height={16}
          viewBox="0 0 16 16"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            fill="white"
            height="15"
            rx="4"
            ry="4"
            stroke="#C1CCD0"
            width="15"
            x="0.5"
            y="0.5"
          />
        </svg>
        <svg
          aria-hidden="true"
          className="c0 c11 c17 c18 c0 c14"
          fill="none"
          height={16}
          viewBox="0 0 16 16"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            fill="#EFF2F3"
            height="15"
            rx="4"
            ry="4"
            stroke="#EFF2F3"
            width="15"
            x="0.5"
            y="0.5"
          />
        </svg>
        <svg
          aria-hidden="true"
          className="c0 c11 c19 c20 c0 c14"
          fill="none"
          height={16}
          viewBox="0 0 16 16"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            fill="#EFF2F3"
            height="15"
            rx="4"
            ry="4"
            stroke="#EFF2F3"
            width="15"
            x="0.5"
            y="0.5"
          />
          <path
            d="M 5,8 L 7,10 L 12,5"
            stroke="#C1CCD0"
            strokeLinecap="round"
            strokeWidth="1.5"
          />
        </svg>
      </div>
      Two
    </li>
    <li
      className="c0 c8"
      width={1}
    >
      <div
        className="c0 c9"
      >
        <input
          className="c0 c10"
          type="checkbox"
        />
        <svg
          aria-hidden="true"
          className="c0 c11 c12 c13 c0 c14"
          fill="none"
          height={16}
          viewBox="0 0 16 16"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            fill="#6A88F2"
            height="15"
            rx="4"
            ry="4"
            stroke="#6A88F2"
            width="15"
            x="0.5"
            y="0.5"
          />
          <path
            d="M 5,8 L 7,10 L 12,5"
            stroke="white"
            strokeLinecap="round"
            strokeWidth="1.5"
          />
        </svg>
        <svg
          aria-hidden="true"
          className="c0 c11 c15 c16 c0 c14"
          fill="none"
          height={16}
          viewBox="0 0 16 16"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            fill="white"
            height="15"
            rx="4"
            ry="4"
            stroke="#C1CCD0"
            width="15"
            x="0.5"
            y="0.5"
          />
        </svg>
        <svg
          aria-hidden="true"
          className="c0 c11 c17 c18 c0 c14"
          fill="none"
          height={16}
          viewBox="0 0 16 16"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            fill="#EFF2F3"
            height="15"
            rx="4"
            ry="4"
            stroke="#EFF2F3"
            width="15"
            x="0.5"
            y="0.5"
          />
        </svg>
        <svg
          aria-hidden="true"
          className="c0 c11 c19 c20 c0 c14"
          fill="none"
          height={16}
          viewBox="0 0 16 16"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            fill="#EFF2F3"
            height="15"
            rx="4"
            ry="4"
            stroke="#EFF2F3"
            width="15"
            x="0.5"
            y="0.5"
          />
          <path
            d="M 5,8 L 7,10 L 12,5"
            stroke="#C1CCD0"
            strokeLinecap="round"
            strokeWidth="1.5"
          />
        </svg>
      </div>
      Three
    </li>
  </div>
</ul>
`;

exports[`ListDefault renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  list-style-type: none;
  padding: 4px;
  width: 33.33333333333333%;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  overflow-y: scroll;
  padding-right: 4px;
  overflow: auto;
  -webkit-scroll-behavior: smooth;
  -moz-scroll-behavior: smooth;
  -ms-scroll-behavior: smooth;
  scroll-behavior: smooth;
}

.c1::-webkit-scrollbar {
  width: 4px;
}

.c1::-webkit-scrollbar-track {
  -webkit-border-radius: 4px;
  background: #E4E8EA;
}

.c1::-webkit-scrollbar-thumb {
  -webkit-border-radius: 4px;
  background: #6F838D;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  font-weight: normal;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  color: white;
  background-color: primary;
  border: 0;
  border-radius: 12px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
}

@media screen and (min-width:40em) {

}

<ul
  className="c0"
  width={0.3333333333333333}
>
  <div
    className="c1"
  >
    <li
      className="c2"
      width={1}
    >
      <div
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <div
          className="c3"
        >
          <button
            className="c4"
            style={
              Object {
                "borderRadius": "0px",
              }
            }
          >
            Item 1
          </button>
        </div>
      </div>
    </li>
    <li
      className="c2"
      width={1}
    >
      <div
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <div
          className="c3"
        >
          <button
            className="c4"
            style={
              Object {
                "borderRadius": "0px",
              }
            }
          >
            Item 2
          </button>
        </div>
      </div>
    </li>
    <li
      className="c2"
      width={1}
    >
      <div
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <div
          className="c3"
        >
          <button
            className="c4"
            style={
              Object {
                "borderRadius": "0px",
              }
            }
          >
            Item 3
          </button>
        </div>
      </div>
    </li>
  </div>
</ul>
`;

exports[`ListIcon renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  list-style-type: none;
  padding: 4px;
  width: 33.33333333333333%;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  overflow-y: scroll;
  padding-right: 4px;
  overflow: auto;
  -webkit-scroll-behavior: smooth;
  -moz-scroll-behavior: smooth;
  -ms-scroll-behavior: smooth;
  scroll-behavior: smooth;
}

.c1::-webkit-scrollbar {
  width: 4px;
}

.c1::-webkit-scrollbar-track {
  -webkit-border-radius: 4px;
  background: #E4E8EA;
}

.c1::-webkit-scrollbar-thumb {
  -webkit-border-radius: 4px;
  background: #6F838D;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  font-weight: bold;
  font-size: 24px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  color: white;
  background-color: primary;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 12px;
  white-space: nowrap;
}

@media screen and (min-width:40em) {

}

<ul
  className="c0"
  width={0.3333333333333333}
>
  <div
    className="c1"
  >
    <li
      className="c2"
      width={1}
    >
      <div
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <div
          className="c3"
        >
          <button
            className="c4"
            style={
              Object {
                "borderRadius": "0px",
              }
            }
          >
            <span
              className="icon-agente"
              style={
                Object {
                  "fontSize": "20px",
                  "height": "20px",
                }
              }
            />
            <span>
              Item 1
            </span>
          </button>
        </div>
      </div>
    </li>
    <li
      className="c2"
      width={1}
    >
      <div
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <div
          className="c3"
        >
          <button
            className="c4"
            style={
              Object {
                "borderRadius": "0px",
              }
            }
          >
            <span
              className="icon-agente"
              style={
                Object {
                  "fontSize": "20px",
                  "height": "20px",
                }
              }
            />
            <span>
              Item 2
            </span>
          </button>
        </div>
      </div>
    </li>
    <li
      className="c2"
      width={1}
    >
      <div
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <div
          className="c3"
        >
          <button
            className="c4"
            style={
              Object {
                "borderRadius": "0px",
              }
            }
          >
            <span
              className="icon-agente"
              style={
                Object {
                  "fontSize": "20px",
                  "height": "20px",
                }
              }
            />
            <span>
              Item 3
            </span>
          </button>
        </div>
      </div>
    </li>
  </div>
</ul>
`;

exports[`ListMultiselect renders correctly 1`] = `
.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  list-style-type: none;
  padding: 4px;
  width: 33.33333333333333%;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  overflow-y: scroll;
  padding-right: 4px;
  overflow: auto;
  -webkit-scroll-behavior: smooth;
  -moz-scroll-behavior: smooth;
  -ms-scroll-behavior: smooth;
  scroll-behavior: smooth;
}

.c2::-webkit-scrollbar {
  width: 4px;
}

.c2::-webkit-scrollbar-track {
  -webkit-border-radius: 4px;
  background: #E4E8EA;
}

.c2::-webkit-scrollbar-thumb {
  -webkit-border-radius: 4px;
  background: #6F838D;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c5 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  font-size: 24px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  color: white;
  background-color: primary;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
}

.c6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  width: 18px;
  height: 18px;
}

.c7 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: absolute;
  opacity: 0;
  overflow: hidden;
  width: 100%;
  height: 100%;
}

.c11 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 8px;
  border-radius: 2px;
  color: gray;
}

input:checked ~ .c0 {
  color: primary;
}

input:focus ~ .c0 {
  box-shadow: active;
}

.c8 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 8px;
  border-radius: 2px;
  color: gray;
  width: 16px;
  height: 16px;
}

input:checked ~ .c0 {
  color: primary;
}

input:focus ~ .c0 {
  box-shadow: active;
}

.c10 {
  display: none;
}

input:checked:not(:disabled) ~ .c9 {
  display: block;
}

.c13 {
  display: none;
}

input:not(:checked):not(:disabled) ~ .c12 {
  display: block;
}

.c17 {
  display: none;
}

input:checked:disabled ~ .c16 {
  display: block;
}

.c15 {
  display: none;
}

input:disabled:not(:checked) ~ .c14 {
  display: block;
}

@media screen and (min-width:40em) {

}

<ul
  className="c0 c1"
  width={0.3333333333333333}
>
  <div
    className="c0 c2"
  >
    <li
      className="c0 c3"
      width={1}
    >
      <div
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <div
          className="c0 c4"
        >
          <button
            className="c0 c5"
            onClick={[Function]}
            style={
              Object {
                "borderRadius": "0px",
              }
            }
          >
            <div
              className="c0 c6"
            >
              <input
                className="c0 c7"
                defaultChecked={false}
                disabled={true}
                type="checkbox"
              />
              <svg
                aria-hidden="true"
                className="c0 c8 c9 c10 c0 c11"
                fill="none"
                height={16}
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  fill="#6A88F2"
                  height="15"
                  rx="4"
                  ry="4"
                  stroke="#6A88F2"
                  width="15"
                  x="0.5"
                  y="0.5"
                />
                <path
                  d="M 5,8 L 7,10 L 12,5"
                  stroke="white"
                  strokeLinecap="round"
                  strokeWidth="1.5"
                />
              </svg>
              <svg
                aria-hidden="true"
                className="c0 c8 c12 c13 c0 c11"
                fill="none"
                height={16}
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  fill="white"
                  height="15"
                  rx="4"
                  ry="4"
                  stroke="#C1CCD0"
                  width="15"
                  x="0.5"
                  y="0.5"
                />
              </svg>
              <svg
                aria-hidden="true"
                className="c0 c8 c14 c15 c0 c11"
                fill="none"
                height={16}
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  fill="#EFF2F3"
                  height="15"
                  rx="4"
                  ry="4"
                  stroke="#EFF2F3"
                  width="15"
                  x="0.5"
                  y="0.5"
                />
              </svg>
              <svg
                aria-hidden="true"
                className="c0 c8 c16 c17 c0 c11"
                fill="none"
                height={16}
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  fill="#EFF2F3"
                  height="15"
                  rx="4"
                  ry="4"
                  stroke="#EFF2F3"
                  width="15"
                  x="0.5"
                  y="0.5"
                />
                <path
                  d="M 5,8 L 7,10 L 12,5"
                  stroke="#C1CCD0"
                  strokeLinecap="round"
                  strokeWidth="1.5"
                />
              </svg>
            </div>
            <span
              style={
                Object {
                  "color": "#94A2AB",
                  "fontWeight": "normal",
                }
              }
            >
              Item 1
            </span>
          </button>
        </div>
      </div>
    </li>
    <li
      className="c0 c3"
      width={1}
    >
      <div
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <div
          className="c0 c4"
        >
          <button
            className="c0 c5"
            onClick={[Function]}
            style={
              Object {
                "borderRadius": "0px",
              }
            }
          >
            <div
              className="c0 c6"
            >
              <input
                className="c0 c7"
                defaultChecked={false}
                disabled={false}
                type="checkbox"
              />
              <svg
                aria-hidden="true"
                className="c0 c8 c9 c10 c0 c11"
                fill="none"
                height={16}
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  fill="#6A88F2"
                  height="15"
                  rx="4"
                  ry="4"
                  stroke="#6A88F2"
                  width="15"
                  x="0.5"
                  y="0.5"
                />
                <path
                  d="M 5,8 L 7,10 L 12,5"
                  stroke="white"
                  strokeLinecap="round"
                  strokeWidth="1.5"
                />
              </svg>
              <svg
                aria-hidden="true"
                className="c0 c8 c12 c13 c0 c11"
                fill="none"
                height={16}
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  fill="white"
                  height="15"
                  rx="4"
                  ry="4"
                  stroke="#C1CCD0"
                  width="15"
                  x="0.5"
                  y="0.5"
                />
              </svg>
              <svg
                aria-hidden="true"
                className="c0 c8 c14 c15 c0 c11"
                fill="none"
                height={16}
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  fill="#EFF2F3"
                  height="15"
                  rx="4"
                  ry="4"
                  stroke="#EFF2F3"
                  width="15"
                  x="0.5"
                  y="0.5"
                />
              </svg>
              <svg
                aria-hidden="true"
                className="c0 c8 c16 c17 c0 c11"
                fill="none"
                height={16}
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  fill="#EFF2F3"
                  height="15"
                  rx="4"
                  ry="4"
                  stroke="#EFF2F3"
                  width="15"
                  x="0.5"
                  y="0.5"
                />
                <path
                  d="M 5,8 L 7,10 L 12,5"
                  stroke="#C1CCD0"
                  strokeLinecap="round"
                  strokeWidth="1.5"
                />
              </svg>
            </div>
            <span
              style={
                Object {
                  "color": "#49565D",
                  "fontWeight": "normal",
                }
              }
            >
              Item 2
            </span>
          </button>
        </div>
      </div>
    </li>
    <li
      className="c0 c3"
      width={1}
    >
      <div
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <div
          className="c0 c4"
        >
          <button
            className="c0 c5"
            onClick={[Function]}
            style={
              Object {
                "borderRadius": "0px",
              }
            }
          >
            <div
              className="c0 c6"
            >
              <input
                className="c0 c7"
                defaultChecked={false}
                disabled={false}
                type="checkbox"
              />
              <svg
                aria-hidden="true"
                className="c0 c8 c9 c10 c0 c11"
                fill="none"
                height={16}
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  fill="#6A88F2"
                  height="15"
                  rx="4"
                  ry="4"
                  stroke="#6A88F2"
                  width="15"
                  x="0.5"
                  y="0.5"
                />
                <path
                  d="M 5,8 L 7,10 L 12,5"
                  stroke="white"
                  strokeLinecap="round"
                  strokeWidth="1.5"
                />
              </svg>
              <svg
                aria-hidden="true"
                className="c0 c8 c12 c13 c0 c11"
                fill="none"
                height={16}
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  fill="white"
                  height="15"
                  rx="4"
                  ry="4"
                  stroke="#C1CCD0"
                  width="15"
                  x="0.5"
                  y="0.5"
                />
              </svg>
              <svg
                aria-hidden="true"
                className="c0 c8 c14 c15 c0 c11"
                fill="none"
                height={16}
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  fill="#EFF2F3"
                  height="15"
                  rx="4"
                  ry="4"
                  stroke="#EFF2F3"
                  width="15"
                  x="0.5"
                  y="0.5"
                />
              </svg>
              <svg
                aria-hidden="true"
                className="c0 c8 c16 c17 c0 c11"
                fill="none"
                height={16}
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  fill="#EFF2F3"
                  height="15"
                  rx="4"
                  ry="4"
                  stroke="#EFF2F3"
                  width="15"
                  x="0.5"
                  y="0.5"
                />
                <path
                  d="M 5,8 L 7,10 L 12,5"
                  stroke="#C1CCD0"
                  strokeLinecap="round"
                  strokeWidth="1.5"
                />
              </svg>
            </div>
            <span
              style={
                Object {
                  "color": "#49565D",
                  "fontWeight": "normal",
                }
              }
            >
              Item 3
            </span>
          </button>
        </div>
      </div>
    </li>
  </div>
</ul>
`;
